--- a/api/wallets/Templates/Registration/CreateUser.html
+++ b/api/wallets/Templates/Registration/CreateUser.html
@@ -1,8 +1,8 @@
-<h2>Create User<h2>
+{% comment %} <h2>Create User<h2>
 <form method="post">
     {%username%}
     {%email%}
     {%password%}
     {%reenter password%}
     <button type="submit">Login</button>
-    </form>
+    </form> {% endcomment %}
