cleaning up and adding details

--- a/api/wallets/Templates/wallets/simple.html
+++ b/api/wallets/Templates/wallets/simple.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Single Page</title>
+        <title>Bitcoin Wallet</title>
         <script>
 
             //  This function communicates with django (backend)
@@ -28,9 +28,9 @@
         </script>
     </head>
     <body>
-        <h1>Hello</h1>
-        <button data-section="1">Section 1</button>
-        <button data-section="2">Section 2</button>
+        <h1>Your Wallet </h1>
+        <button data-section="1">Create</button>
+        <button data-section="2">Transactions</button>
         <button data-section="3">Section 3</button>
 
         <!-- Contents loaded from server is inserted here by javascript -->
