--- a/api/wallets/Templates/wallets/index.html
+++ b/api/wallets/Templates/wallets/index.html
@@ -25,7 +25,7 @@
     </head>
     <body>
         <h1>Your Wallet </h1>
-        <button data-section="1" onclick = "location.href = 'create/'" name = 'Create'>Create</button>
+        <button data-section="1" onclick = "location.href = 'create.html'" name = 'Create'>Create</button>
         <button data-section="2">Transactions</button>
         <button data-section="3">Section 3</button>
     
