--- a/api/wallets/Templates/wallets/index.html
+++ b/api/wallets/Templates/wallets/index.html
@@ -25,7 +25,7 @@
     </head>
     <body>
         <h1>Your Wallet </h1>
-        <button data-section="1" onclick = "location.href = 'create.html'" name = 'Create'>Create</button>
+        <button data-section="1" onclick = "location.href = 'create/'" name = 'Create'>Create</button>
         <button data-section="2">Transactions</button>
         {% block content %}
         <h1>Wallet List</h1>
@@ -33,7 +33,7 @@
         <ul>
           {% for Wallet in wallet_list %}
             <li>
-              <a href="{{ Wallet.id }}">{{ Wallet.name}}</a>
+              <a href="{{ Wallet.id }}">{{ Wallet.label}}</a>
             </li>
           {% endfor %}
         </ul>
