--- a/api/wallets/Templates/wallets/details.html
+++ b/api/wallets/Templates/wallets/details.html
@@ -34,7 +34,7 @@
             <h1>Transaction List</h1>
         <ul>
             {% for tx in object_list %}
-                <li>{{tx.created_at}} - {{tx.amount}}</li>
+                <li>{{tx.created}} - {{tx.amount}}</li>
             {% empty %}
                 <p>There are no transactions in this wallet.</p>
             {% endfor %}
