--- a/api/wallets/Templates/wallets/send.html
+++ b/api/wallets/Templates/wallets/send.html
@@ -25,14 +25,14 @@
     </head>
     
     <body>
-        <form action='/wallets/' method='GET'>
+        <form action={{ return_address }} method='GET'>
             <button type='submit'>Exit</button>
         </form>
     <body>
     <form action = "" method = "post">
         {% csrf_token %}
-        {{form }}
-        <input type="submit" value="Submit">
+        {{ form }}
+        <input type="submit" value="Send">
     </form>
     
 <html>
